--- a/InterfazIT/InterfazIT/packages.config
+++ b/InterfazIT/InterfazIT/packages.config
@@ -81,5 +81,6 @@
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.7.1" targetFramework="net472" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
+  <package id="Vintasoft.Barcode" version="12.4.8.1" targetFramework="net472" />
   <package id="WebGrease" version="1.6.0" targetFramework="net472" />
 </packages>
