--- a/InterfazIT/InterfazIT/InterfazIT.csproj
+++ b/InterfazIT/InterfazIT/InterfazIT.csproj
@@ -344,6 +344,7 @@
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="fonts\styles.css" />
+    <Content Include="fonts\StylesReport.css" />
     <Content Include="Global.asax" />
     <Content Include="fonts\glyphicons-halflings-regular.woff2" />
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
